--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -1,8 +1,12 @@
-## 작업 계획 (테이블)
+작업 계획 (테이블)
 
 서비스 나누기 - 카테고리, 상품, 주문, 장바구니
 
-### [회원] - `/api/user/{url}`
+---
+
+## [회원]
+
+###  - `/api/user/{url}`
 
 | API목록            | url       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
 | ------------------ | --------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
@@ -16,7 +20,9 @@
 
 <br>
 
-### [카테고리] - `/api/admin/category/{url}`
+## [카테고리]
+
+### - `/api/admin/category/{url}`
 
 | API목록                | url                    | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
 | ---------------------- | ---------------------- | -------- | ------------ | -------- | -------- | ---------- |
@@ -26,37 +32,44 @@
 | 하위 카테고리 등록     | /addLow                | 07.18    | 30m          | 07.18    | 30m      |            |
 | 카테고리 수정          | /modify                | 07.18    | 30m          | 07.18    | 30m      |            |
 | 카테고리 삭제          | /delete?no={no}        | 07.18    | 30m          | 07.18    | 30m      |            |
-| 카테고리 목            | /list                  | 07.18    | 1h           | 07.18    | 1h       |            |
+| 카테고리 목록          | /list                  | 07.18    | 1h           | 07.18    | 1h       |            |
 
 <br>
 
-### [상품] - `/api/admin/product/{url}`
+## [상품]
+
+### - `/api/admin/product/{url}`
 
 | API목록             | url        | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
 | ------------------- | ---------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
 | 상품등록            | /add       | 07.19    | 2h           | 07.19    | 4h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품등록) |
 | 상품 상위 옵션 등록 | /addOption | 07.19    | 1h           | 07.19    | 2h       |                                                              |
-|                     |            |          |              |          |          |                                                              |
-|                     |            |          |              |          |          |                                                              |
-|                     |            |          |              |          |          |                                                              |
-|                     |            |          |              |          |          |                                                              |
-|                     |            |          |              |          |          |                                                              |
-|                     |            |          |              |          |          |                                                              |
+| 상품 수정           |            | 07.22    |              |          |          |                                                              |
+| 상품 옵션 가져오기  |            | 07.22    |              |          |          |                                                              |
+| 상품 옵션 수정      |            | 07.22    |              |          |          |                                                              |
+
+### - `/api/product/{url}`
+
+> todo : 상품목록 합치기
+
+| API목록                        | url                 | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ------------------------------ | ------------------- | -------- | ------------ | -------- | -------- | ---------- |
+| 상품 목록                      | /                   | 07.22    |              |          |          |            |
+| 검색어&카테고리 조건 상품 목록 | /{categoryNo}       | 07.23    |              |          |          |            |
+| 상품 상세정보                  | /detail/{productNo} | 07.23    |              |          |          |            |
 
 <br>
 
-### [장바구니] - `/api/cart/{url}`
+## [장바구니] 
 
-| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
+### - `/api/cart/{url}`
+
+| API목록       | url                         | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ------------- | --------------------------- | -------- | ------------ | -------- | -------- | ---------- |
+| 장바구니 추가 | /{userNo}/{productOptionNo} |          |              |          |          |            |
+| 장바구니 수정 | /modify/{userId}/{cartNo}   |          |              |          |          |            |
+| 장바구니 삭제 | /delete/{userId}/{cartNo}   |          |              |          |          |            |
+| 장바구니 목록 | /{userId}                   |          |              |          |          |            |
 
 
 
@@ -66,12 +79,6 @@
 | ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
 |         |      |          |              |          |          |            |
 |         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
 
 
 
@@ -79,36 +86,27 @@
 
 
 
----
 
-<API 작업 결과 양식 - API 별>
 
-로그인 API (/login/xxxx/xxxxx) 
-■ request: 
-   post 
-     params: 
-       user_id = 사용자ID 
-       user_pwd = 사용자 비밀번호  
-       client_ip = 사용자 접근 IP 
 
-■ response: 
-     200: 성공 
-       xxxxx 
-     400: 실패 
-       case1. 사용자ID 형식 오류 
-       case2. 사용자ID 값 없음 
-       xxxxx 
 
-■ 실제동작코드 
-a.java 
-  <java code> 
 
-b.java 
-  <java code> 
 
-■ TC CODE 
 
- <tc code>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
