--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -6,6 +6,11 @@
 - mall_id 테이블 만들기
 - 모든 컬럼에 mall_id 추가하기
 - 상품 등록, 옵션 등록 합치기
+- 이미지 업로드 (대표사진)
+- user table role 수정 => ROLE_USER, ROLE_ADMIN
+- 결제시스템..!
+
+✨장바구니 erd 수정하기✨
 
 
 
@@ -15,15 +20,19 @@
 
 ###  - `/api/user/{url}`
 
-| API목록            | url       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
-| ------------------ | --------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
-| 로그인 API         | /login    | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
-| 회원가입 API       | /join     | 07.16    | 2h (2시간)   | 07.16    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원가입) |
-| 아이디 중복 검사   | /checkId  | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디중복검사) |
-| 아이디 찾기        | /findId   | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
-| 회원리스트(관리자) | /userList | 07.16    | 1h (1시간)   | 07.16    | 30m      | ->관리자로 옮기기                                            |
-| 회원정보수정       | /modify   | 07.17    | 1h (1시간)   | 07.17    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원정보수정) |
-| 회원삭제(탈퇴)     | /delete   | 07.17    | 1h (1시간)   | 07.17    | 30h      | ->관리자로 옮기기                                            |
+| API목록                     | url             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
+| --------------------------- | --------------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
+| 로그인 API                  | /login          | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
+| 회원가입 API                | /join           | 07.16    | 2h (2시간)   | 07.16    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원가입) |
+| 아이디 중복 검사            | /checkId        | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디중복검사) |
+| 아이디 찾기                 | /findId         | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
+| 회원리스트(관리자)          | /userList       | 07.16    | 1h (1시간)   | 07.16    | 30m      | ->관리자로 옮기기                                            |
+| 회원정보수정                | /modify         | 07.17    | 1h (1시간)   | 07.17    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원정보수정) |
+| 회원삭제(탈퇴)              | /delete         | 07.17    | 1h (1시간)   | 07.17    | 30h      | ->관리자로 옮기기                                            |
+| 회원 주소지 등록            | /addAddress     |          |              |          |          |                                                              |
+| 회원 주소지 삭제            | /deleteAddress  |          |              |          |          |                                                              |
+| 회원 주소지 리스트 가져오기 | /getAddressList |          |              |          |          |                                                              |
+| 회원 주소지 하나 가져오기   | /getAddress     |          |              |          |          |                                                              |
 
 <br>
 
@@ -78,33 +87,63 @@
 
 ![1563972499863](assets/1563972499863.png)
 
-![1563972487955](assets/1563972487955.png)
+![1564014464848](assets/1564014464848.png)
 
-장바구니에 추가할 때
+**장바구니에 추가할 때**
 
 : 상품옵션번호, 회원번호, 수량
 
-장바구니 가져올 것
+> get으로 가져와서 있으면 update
+
+: 로그인 여부 검사(비로그인의 경우) -> 프론트엔드 : 회원 장바구니 담기, 비회원 장바구니 담기 다른 api
+
+: 담는 수량이 재고만큼 존재하는지
+
+: 존재하는 옵션 번호인지 
+
+
+
+**장바구니 가져올 것**
 
 : 상품 번호, 상품 이름, 상품 옵션, 상품 수량, 가격
 
-| API목록       | url                         | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------------- | --------------------------- | -------- | ------------ | -------- | -------- | ---------- |
-| 장바구니 추가 | /{userNo}/{productOptionNo} |          |              |          |          |            |
-| 장바구니 수정 | /modify/{userId}/{cartNo}   |          |              |          |          |            |
-| 장바구니 삭제 | /delete/{userId}/{cartNo}   |          |              |          |          |            |
-| 장바구니 목록 | /{userId}                   |          |              |          |          |            |
+
+
+**개선**
+
+원래 회원따로, 비회원따로 장바구니 추가했었다가 -> xml에서 if로 나눴음
+
+
+
+**생각한 것 :**
+
+- 상품 옵션 변경도 고려 
+
+
+
+| API목록                                             | url                        | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| --------------------------------------------------- | -------------------------- | -------- | ------------ | -------- | -------- | ---------- |
+| 장바구니 추가(회원&비회원)                          | /add                       |          |              |          |          |            |
+| 장바구니 리스트(회원&비회원)                        | /getList                   |          |              |          |          |            |
+| 장바구니 상품(상품옵션)의 상품의 옵션 목록 가져오기 | /getOptionList             |          |              |          |          |            |
+| 장바구니 옵션 변경(회원&비회원)                     | /add(서비스에서 로직 처리) |          |              |          |          |            |
+| 장바구니 수량 변경(회원&비회원)                     | /add(서비스에서 로직 처리) |          |              |          |          |            |
+| 장바구니 삭제(회원&비회원)                          | /delete                    |          |              |          |          |            |
 
 
 
 ### [주문] 
 
+![1564050717901](assets/1564050717901.png)
+
 ### - `/api/order/{url}`
 
-| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
+| API목록                                | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| -------------------------------------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
+| 주문하기                               |      |          |              |          |          |            |
+| 주문 목록                              |      |          |              |          |          |            |
+| 주문 상세                              |      |          |              |          |          |            |
+| 주문 취소<br>(배송상태-준비중일경우만) |      |          |              |          |          |            |
 
 ### - `/api/admin/order/{url}`
 
@@ -144,25 +183,6 @@
 
 
 
-
-```sql
-CREATE TABLE `CART` (
-	`user_no`  int default null COMMENT '회원번호', -- 회원번호
-	`product_no` int NOT NULL COMMENT '상품번호', -- 상품번호
-	`nonuser_no` int default null COMMENT '비회원번호', -- 비회원번호
-	`quantity` int NOT NULL COMMENT '수량' -- 수량
-)
-COMMENT '장바구니';
-
--- 장바구니
-ALTER TABLE `CART`
-	ADD CONSTRAINT `PK_TABLE` -- 장바구니 기본키
-		PRIMARY KEY (
-			`user_no`,  -- 회원번호
-			`product_no`, -- 상품번호
-			`nonuser_no`  -- 비회원번호
-		);
-```
 
 
 
