제출양식 추가

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -1,3 +1,5 @@
+
+
 작업 계획 (테이블)
 
 # TODO LIST
@@ -9,10 +11,22 @@
 - 이미지 업로드 (대표사진)
 - user table role 수정 => ROLE_USER, ROLE_ADMIN
 - 결제시스템..!
+- 주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인
+- 주문시 장바구니 비우기
+- 장바구니 담을때도 재고 확인하기 -> `orderDao.stockCheck()`
+- 발리데이션 추가하기 ( 커스텀 )
+- 파라미터 받기 형식 수정하기 (파람, 패스배리어블)
+- db예외처리
 
 ✨장바구니 erd 수정하기✨
 
 
+
+개선
+
+-> 비회원 컨트롤러 -> 비회원 기능 나누기
+
+> 나중에 시큐리티  적용하고 `antMatch("/nonuser**").permitAll()` 이런식으로 나누기위해
 
 ---
 
@@ -28,7 +42,7 @@
 | 아이디 찾기                 | /findId         | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
 | 회원리스트(관리자)          | /userList       | 07.16    | 1h (1시간)   | 07.16    | 30m      | ->관리자로 옮기기                                            |
 | 회원정보수정                | /modify         | 07.17    | 1h (1시간)   | 07.17    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원정보수정) |
-| 회원삭제(탈퇴)              | /delete         | 07.17    | 1h (1시간)   | 07.17    | 30h      | ->관리자로 옮기기                                            |
+| 회원삭제(탈퇴)              | /delete         | 07.17    | 1h (1시간)   | 07.17    | 30h      |                                                              |
 | 회원 주소지 등록            | /addAddress     |          |              |          |          |                                                              |
 | 회원 주소지 삭제            | /deleteAddress  |          |              |          |          |                                                              |
 | 회원 주소지 리스트 가져오기 | /getAddressList |          |              |          |          |                                                              |
@@ -117,7 +131,7 @@
 
 **생각한 것 :**
 
-- 상품 옵션 변경도 고려 
+- 장바구니 상품 옵션 변경도 고려 
 
 
 
@@ -134,29 +148,32 @@
 
 ### [주문] 
 
-![1564050717901](assets/1564050717901.png)
+- 주문시 재고 체크하기 추가 
+
+- 주문시 -> 결제방법으로 무통장입금일 경우
+
+    ![1564050717901](assets/1564050717901.png)
+
+  ![1564210654909](assets/1564210654909.png)
+
+  테이블 수정
 
 ### - `/api/order/{url}`
 
-| API목록                                | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| -------------------------------------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
-| 주문하기                               |      |          |              |          |          |            |
-| 주문 목록                              |      |          |              |          |          |            |
-| 주문 상세                              |      |          |              |          |          |            |
-| 주문 취소<br>(배송상태-준비중일경우만) |      |          |              |          |          |            |
+| API목록                                | url          | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| -------------------------------------- | ------------ | -------- | ------------ | -------- | -------- | ---------- |
+| 주문하기                               | /add         |          |              |          |          |            |
+| 주문 목록                              | /list        |          |              |          |          |            |
+| 주문 목록(비회원)                      | /list        |          |              |          |          |            |
+| 주문 상세                              | /detail/{no} |          |              |          |          |            |
+| 주문 취소<br>(배송상태-준비중일경우만) |              |          |              |          |          |            |
 
 ### - `/api/admin/order/{url}`
 
-| API목록 | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
-|         |      |          |              |          |          |            |
-|         |      |          |              |          |          |            |
-
-
-
-
-
-
+| API목록        | url  | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| -------------- | ---- | -------- | ------------ | -------- | -------- | ---------- |
+| 모든 주문 목록 |      |          |              |          |          |            |
+|                |      |          |              |          |          |            |
 
 
 
