제출양식 수정

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -4,14 +4,13 @@
 
 # TODO LIST
 
-- user table role 추가하기
 - mall_id 테이블 만들기
 - 모든 컬럼에 mall_id 추가하기
 - 상품 등록, 옵션 등록 합치기
 - 이미지 업로드 (대표사진)
 - user table role 수정 => ROLE_USER, ROLE_ADMIN
 - 결제시스템..!
-- 주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인
+- ~~주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인~~
 - 주문시 장바구니 비우기
 - 장바구니 담을때도 재고 확인하기 -> `orderDao.stockCheck()`
 - 발리데이션 추가하기 ( 커스텀 )
@@ -22,7 +21,7 @@
 
 
 
-개선
+**개선**
 
 -> 비회원 컨트롤러 -> 비회원 기능 나누기
 
@@ -30,23 +29,39 @@
 
 ---
 
+## [비회원]
+
+### - `/api/nonuser/{url}`
+
+| API목록          | url      | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
+| ---------------- | -------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
+| 회원가입 API     | /join    | 07.16    | 2h (2시간)   | 07.16    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원가입) |
+| 아이디 중복 검사 | /checkId | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디중복검사) |
+| 아이디 찾기      | /findId  | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
+| 로그인 API       | /login   | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
+
+
+
 ## [회원]
 
 ###  - `/api/user/{url}`
 
 | API목록                     | url             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서                                                   |
 | --------------------------- | --------------- | -------- | ------------ | -------- | -------- | ------------------------------------------------------------ |
-| 로그인 API                  | /login          | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
-| 회원가입 API                | /join           | 07.16    | 2h (2시간)   | 07.16    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원가입) |
-| 아이디 중복 검사            | /checkId        | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디중복검사) |
-| 아이디 찾기                 | /findId         | 07.16    | 1h (1시간)   | 07.16    | 1h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
-| 회원리스트(관리자)          | /userList       | 07.16    | 1h (1시간)   | 07.16    | 30m      | ->관리자로 옮기기                                            |
 | 회원정보수정                | /modify         | 07.17    | 1h (1시간)   | 07.17    | 2h       | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원정보수정) |
 | 회원삭제(탈퇴)              | /delete         | 07.17    | 1h (1시간)   | 07.17    | 30h      |                                                              |
 | 회원 주소지 등록            | /addAddress     |          |              |          |          |                                                              |
 | 회원 주소지 삭제            | /deleteAddress  |          |              |          |          |                                                              |
 | 회원 주소지 리스트 가져오기 | /getAddressList |          |              |          |          |                                                              |
 | 회원 주소지 하나 가져오기   | /getAddress     |          |              |          |          |                                                              |
+
+### - `/api/admin/user/{url}`
+
+| API목록    | url       | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
+| ---------- | --------- | -------- | ------------ | -------- | -------- | ---------- |
+| 회원리스트 | /userList |          |              |          |          |            |
+
+
 
 <br>
 
