제출양식 수정 - 장바구니상품옵션가져오기 추가

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -17,9 +17,9 @@
 | 아이디 찾기                 | /findId             | 07.16    | 1h (1시간)   | 07.16    | 1h         | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
 | 로그인 API                  | /login              | 07.16    | 1h (1시간)   | 07.16    | 1h         | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
 |                             |                     |          |              |          |            |                                                              |
-| 장바구니 상품 추가          | /cart/add           | 07.25    | 1h (1시간)   | 07.25    | 2h (2시간) | [보기]([https://github.com/jungeunlee95/shopping-mall/wiki/%ED%9A%8C%EC%9B%90%EC%9E%A5%EB%B0%94%EA%B5%AC%EB%8B%88%EC%83%81%ED%92%88%EC%B6%94%EA%B0%80](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니상품추가)) |
-| 장바구니 상품 삭제          | /cart/delete        | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기]([https://github.com/jungeunlee95/shopping-mall/wiki/%EC%9E%A5%EB%B0%94%EA%B5%AC%EB%8B%88%EC%83%81%ED%92%88%EC%82%AD%EC%A0%9C](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니상품삭제)) |
-| 장바구니 목록 가져오기      | /cart/getList       | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기]([https://github.com/jungeunlee95/shopping-mall/wiki/%EC%9E%A5%EB%B0%94%EA%B5%AC%EB%8B%88-%EB%AA%A9%EB%A1%9D](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니-목록)) |
+| 장바구니 상품 추가          | /cart/add           | 07.25    | 1h (1시간)   | 07.25    | 2h (2시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니상품추가) |
+| 장바구니 상품 삭제          | /cart/delete        | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니상품삭제) |
+| 장바구니 목록 가져오기      | /cart/getList       | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니-목록) |
 | 장바구니 상품 옵션 가져오기 | /cart/getOptionList | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) |                                                              |
 |                             |                     |          |              |          |            |                                                              |
 | 비회원 주문하기             | /order/add          | 07.26    |              |          |            |                                                              |
