--- a/3주차/작업결과서/상품등록.md
+++ b/3주차/작업결과서/상품등록.md
@@ -1,49 +1,57 @@
 # 상품등록 API (  /api/admin/product/add ) 
 
-# 상품등록 API (  /api/admin/product/add ) 
 > 상품등록이 생각보다 고려할 것이 많아 시간이 오래 걸렸다.
 ---
 상품 등록할 때 고려사항
 
--> 카테고리 수 만큼 등록 (category에서 존재하는 카테고리 목록 가져오고 그중에 선택한 것 만큼 -> 상품 먼저 등록 후 -> insetkey가져와서 -> category_product에 등록)
+- 카테고리 수 만큼 등록 
 
-->  옵션여부 false인 경우 -> 바로 상품 등록 
+  > 하나의 상품은 여러개의 카테고리를 가질 수 있다, 
+  >
+  > ex) 나시 원피스의 경우 [나시] 카테고리와 [원피스] 카테고리에 해당될 수 있다.
 
--> 옵션여부 true인 경우 -> 
+  (category에서 존재하는 카테고리 목록 가져오고 그중에 선택한 것 만큼 
 
-> - 옵션 이름 -> optionname table 순회 후 있으면 그 번호 가져오고 없으면 insert후 그 번호 가져오기
-> - 옵션 이름 번호 가져오면 상품 번호와 함께, 날라온 세트 옵션 값 등록(1(색상)번일 경우) -> 같은 세트인 검정, 파랑을 option테이블에 insert
+  -> service에서 상품 등록 후 insetkey를 가져와서, category_product에 `<foreach>`를 통해서 선택된 카테고리를 모두 넣어준다.
 
-![예시데이터](https://github.com/jungeunlee95/shoppingmall-project-docs/blob/master/3%EC%A3%BC%EC%B0%A8/assets/1563535970285.png)
+- 옵션여부 false인 경우 -> 바로 상품 등록 
+
+  > 옵션 여부를 사용하지 않는 경우 상품테이블에 상품을 등록한다.
+
+- 옵션여부 true인 경우
+
+  > - 옵션 이름 -> optionname table 순회 후 있으면 그 번호 가져오고 없으면 insert후 그 번호 가져오기
+  > - 옵션 이름 번호 가져오면 상품 번호와 함께, 날라온 세트 옵션 값 등록(1(색상)번일 경우) -> 같은 세트인 검정, 파랑을 option테이블에 insert
+
+![예시데이터](https://github.com/jungeunlee95/shoppingmall-project-docs/blob/master/3%EC%A3%BC%EC%B0%A8/assets/1563535970285.png?raw=true)
 ---
+
+<br>
 
 ■ request: 
    post 
      params: 
        ProductVo = 상품에 관한 정보들
 
-		> ProductVo Fileds 중 전송되는 데이터
-		>
-		> ```java
-		> private String name;							// 상품 이름
-		> private int price;								// 상품 가격
-		> private boolean show;							// 진열 여부
-		> private boolean option;							// 옵션 여부
-		> private int shippingFee;						// 배송비
-		> private int orderNo;							// 진열 순위
-		> private String contents;						// 본문 내용
-		> 
-		> private List<OptionValueVo> optionValueList;	// 옵션(하위) 리스트
-		> private List<CategoryVo> categoryList;			// 카테고리 리스트
-		> ```
+	name: 상품이름
+	price: 가격
+	isShow: 진열여부 
+	isOption: 옵션여부 
+	shippingFee: 배송비 
+	orderNo: 진열순서
+	contents: 본문내용 
+	List<CategoryVo>: 카테고리 리스트 
+	List<OptionValueVo>: 등록할 옵션 리스트 
 
-
+<br>
 
 ■ response: 
      200: 성공 
-      
-     400: 실패 
-       case1. parameter의 형식 오류
+
+​     400: 실패 
+   case1. parameter의 형식 오류
+
+<br>
 
 ■ 실제동작코드 
 a.java 
@@ -51,9 +59,22 @@ a.java
 **AdminProductController.java**
 
 ```java
-@GetMapping(value="/add") 
+@ApiOperation(value="상품 등록")
+@ApiImplicitParams({
+    @ApiImplicitParam(name="ProductVo", 
+                      value="name: 상품이름  \n "
+                      + "price: 가격 \n "
+                      + "isShow: 진열여부 \n "
+                      + "isOption: 옵션여부 \n "
+                      + "shippingFee: 배송비 \n "
+                      + "orderNo: 진열순서 \n "
+                      + "contents: 본문내용 \n "
+                      + "List<CategoryVo>: 카테고리 리스트 \n "
+                      + "List<OptionValueVo>: 등록할 옵션 리스트 \n "					
+                      , required=true, dataType="ProductVo", defaultValue="")
+})
+@PostMapping(value="/add") 
 public ResponseEntity<JSONResult> addProduct(@RequestBody ProductVo productVo) {
-
     Boolean result = productService.addProduct(productVo);
     return ResponseEntity.status(HttpStatus.OK).body(JSONResult.success(result));
 } 
@@ -65,19 +86,18 @@ public ResponseEntity<JSONResult> addProduct(@RequestBody ProductVo productVo) {
 
 ```java
 public Boolean addProduct(ProductVo productVo) {
-    // 트랜잭션 적용하면 사라질 코드
     int result = 0;  // 상품등록 성공 확인
     int result2 = 0; // 카테고리 등록 성공 확인
     int result3 = 0; // 옵션 등록 성공 확인
 
     // 옵션 사용 X -> 카테고리만 등록
     result = productDao.addProduct(productVo);
+
     if(result==1) {
         result2 =productDao.addCategoryAndProduct(productVo.getNo(), productVo.getCategoryList());
     }
-
     // 옵션 사용 O -> 옵션 등록
-    if(result==1 && productVo.isOption()){
+    if(result==1 && productVo.getIsOption()){
         result3 = productDao.addOptionValue(productVo.getNo(), productVo.getOptionValueList());
     }
 
